added config params